Improve anchor management Add Search box and main_page

--- a/tools/ocp-lint-doc/css/ocplint.css
+++ b/tools/ocp-lint-doc/css/ocplint.css
@@ -15,3 +15,22 @@ table th {
 table td {
     padding: 5px;
 }
+
+.searchtab tbody tr:hover{
+    background-color: #A9A9A9;
+}
+
+.warntab tbody tr:hover {
+    background-color: #A9A9A9;
+}
+
+#search_box {
+    background-image: url('searchicon.png');
+    background-position: 10px 12px;
+    background-repeat: no-repeat;
+    width: 100%;
+    font-size: 16px;
+    padding: 12px 20px 12px 40px;
+    border: 1px solid #ddd;
+    margin-bottom: 12px;
+}
